Added /documents/{documentId}/accessAttributes endpoints
