# docs/openapi/openapi-iam.yaml
@@ -61,6 +61,9 @@
         - name: documentFolders
           description: Document Folders API
           x-displayName: Document Folders
+        - name: accessControl
+          description: Access Control API
+          x-displayName: Access Control
         - name: documentShares
           description: Document Shares API
           x-displayName: Document Shares
@@ -329,7 +332,7 @@
               description: Returns OPA Configuration, can only be requested with ADMIN privileges
               summary: Get OPA Configuration
               tags:
-              - System Management
+              - Access Control
               parameters:
               - $ref: '#/components/parameters/siteIdParam'
               responses:
@@ -358,7 +361,7 @@
               description: Set OPA Configuration, can only be requested with ADMIN privileges
               summary: Set OPA Configuration
               tags:
-              - System Management
+              - Access Control
               requestBody:
                 required: true
                 content:
@@ -388,7 +391,7 @@
               summary: Delete OPA Configuration
               description: Delete OPA Configuration
               tags:
-              - System Management
+              - Access Control
               parameters:
               - $ref: '#/components/parameters/siteIdParam'
               responses:
@@ -602,7 +605,7 @@
                 content:
                   application/json:
                     schema:
-                      $ref: '#/components/schemas/AddDocumentRequest'
+                      $ref: '#/components/schemas/UpdateDocumentRequest'
                     examples:
                       Simple_File:
                         value:
@@ -693,6 +696,139 @@
                     application/json:
                       schema:
                         $ref: '#/components/schemas/GetDocumentContentResponse'
+              security:
+              - ApiAuthorization: []
+              x-amazon-apigateway-integration:
+                $ref: '#/components/x-amazon-apigateway-integrations/lambdaApi200'
+          /documents/{documentId}/accessAttributes:
+            get:
+              operationId: GetDocumentAccessAttributes
+              summary: Get document access attributes
+              description: Retrieves a document's access attributes (only "admin" role can call API)
+              tags:
+              - Access Control
+              parameters:
+              - $ref: '#/components/parameters/siteIdParam'
+              - $ref: '#/components/parameters/documentIdParam'
+              responses:
+                "200":
+                  description: 200 OK
+                  headers:
+                    Access-Control-Allow-Origin:
+                      $ref: '#/components/headers/AccessControlAllowOrigin'
+                    Access-Control-Allow-Methods:
+                      $ref: '#/components/headers/AccessControlAllowMethods'
+                    Access-Control-Allow-Headers:
+                      $ref: '#/components/headers/AccessControlAllowHeaders'
+                  content:
+                    application/json:
+                      schema:
+                        $ref: '#/components/schemas/GetDocumentAccessAttributesResponse'
+              security:
+              - ApiAuthorization: []
+              x-amazon-apigateway-integration:
+                $ref: '#/components/x-amazon-apigateway-integrations/lambdaApi200'
+            post:
+              operationId: AddDocumentAccessAttributes
+              summary: Add document access attributes
+              description: Add a document's access attributes (only "admin" role can call API)
+              tags:
+              - Access Control
+              parameters:
+              - $ref: '#/components/parameters/siteIdParam'
+              - $ref: '#/components/parameters/documentIdParam'
+              requestBody:
+                required: true
+                content:
+                  application/json:
+                    schema:
+                      $ref: '#/components/schemas/AddDocumentAccessAttributesRequest'
+              responses:
+                "200":
+                  description: 200 OK
+                  headers:
+                    Access-Control-Allow-Origin:
+                      $ref: '#/components/headers/AccessControlAllowOrigin'
+                    Access-Control-Allow-Methods:
+                      $ref: '#/components/headers/AccessControlAllowMethods'
+                    Access-Control-Allow-Headers:
+                      $ref: '#/components/headers/AccessControlAllowHeaders'
+                  content:
+                    application/json:
+                      schema:
+                        $ref: '#/components/schemas/AddDocumentAccessAttributesResponse'
+                "400":
+                  description: 400 OK
+                  content:
+                    application/json:
+                      schema:
+                        $ref: '#/components/schemas/ValidationErrorsResponse'
+              security:
+              - ApiAuthorization: []
+              x-amazon-apigateway-integration:
+                $ref: '#/components/x-amazon-apigateway-integrations/lambdaApi200'
+            put:
+              operationId: SetDocumentAccessAttributes
+              summary: Set document access attributes
+              description: Set a document's access attributes (only "admin" role can call API)
+              tags:
+              - Access Control
+              parameters:
+              - $ref: '#/components/parameters/siteIdParam'
+              - $ref: '#/components/parameters/documentIdParam'
+              requestBody:
+                required: true
+                content:
+                  application/json:
+                    schema:
+                      $ref: '#/components/schemas/SetDocumentAccessAttributesRequest'
+              responses:
+                "200":
+                  description: 200 OK
+                  headers:
+                    Access-Control-Allow-Origin:
+                      $ref: '#/components/headers/AccessControlAllowOrigin'
+                    Access-Control-Allow-Methods:
+                      $ref: '#/components/headers/AccessControlAllowMethods'
+                    Access-Control-Allow-Headers:
+                      $ref: '#/components/headers/AccessControlAllowHeaders'
+                  content:
+                    application/json:
+                      schema:
+                        $ref: '#/components/schemas/SetDocumentAccessAttributesResponse'
+                "400":
+                  description: 400 OK
+                  content:
+                    application/json:
+                      schema:
+                        $ref: '#/components/schemas/ValidationErrorsResponse'
+              security:
+              - ApiAuthorization: []
+              x-amazon-apigateway-integration:
+                $ref: '#/components/x-amazon-apigateway-integrations/lambdaApi200'
+            delete:
+              operationId: DeleteDocumentAccessAttributes
+              summary: Delete document's access attributes
+              description: Delete a document's access attributes
+              tags:
+              - Access Control
+              parameters:
+              - $ref: '#/components/parameters/siteIdParam'
+              - $ref: '#/components/parameters/documentIdParam'
+              responses:
+                "200":
+                  description: 200 OK
+                  headers:
+                    Access-Control-Allow-Origin:
+                      $ref: '#/components/headers/AccessControlAllowOrigin'
+                    Access-Control-Allow-Methods:
+                      $ref: '#/components/headers/AccessControlAllowMethods'
+                    Access-Control-Allow-Headers:
+                      $ref: '#/components/headers/AccessControlAllowHeaders'
+                  content:
+                    application/json:
+                      schema:
+                        $ref: '#/components/schemas/DeleteDocumentAccessAttributesResponse'
               security:
               - ApiAuthorization: []
               x-amazon-apigateway-integration:
@@ -4413,6 +4549,52 @@
                   description: List of Actions
                   items:
                     $ref: '#/components/schemas/AddAction'
+                accessAttributes:
+                  type: array
+                  description: List of Access Attributes (only available in pro/enterprise)
+                  items:
+                    $ref: '#/components/schemas/AddAccessAttribute'
+                documents:
+                  type: array
+                  description: List of child documents
+                  items:
+                    $ref: '#/components/schemas/AddChildDocument'
+            UpdateDocumentRequest:
+              type: object
+              properties:
+                tagSchemaId:
+                  type: string
+                  description: Tag Schema Id
+                path:
+                  type: string
+                  description: Path or Name of document
+                deepLinkPath:
+                  type: string
+                  description: Path or Name of deep link
+                contentType:
+                  type: string
+                  description: Document media type
+                isBase64:
+                  type: boolean
+                  description: Is the content Base64-encoded?
+                content:
+                  type: string
+                  description: Document content
+                tags:
+                  type: array
+                  description: List of document tags
+                  items:
+                    $ref: '#/components/schemas/AddDocumentTag'
+                metadata:
+                  type: array
+                  description: List of document Metadata
+                  items:
+                    $ref: '#/components/schemas/AddDocumentMetadata'
+                actions:
+                  type: array
+                  description: List of Actions
+                  items:
+                    $ref: '#/components/schemas/AddAction'
                 documents:
                   type: array
                   description: List of child documents
@@ -4544,6 +4726,67 @@
                   items:
                     type: string
                     description: Metadata value
+            AddDocumentAccessAttributesRequest:
+              type: object
+              description: List of document access attributes to add
+              properties:
+                accessAttributes:
+                  type: array
+                  description: List of document access attributes
+                  items:
+                    $ref: '#/components/schemas/AddAccessAttribute'
+            SetDocumentAccessAttributesRequest:
+              type: object
+              description: List of document access attributes to set
+              properties:
+                accessAttributes:
+                  type: array
+                  description: List of document access attributes
+                  items:
+                    $ref: '#/components/schemas/AddAccessAttribute'
+            GetDocumentAccessAttributesResponse:
+              type: object
+              description: List of document access attributes
+              properties:
+                accessAttributes:
+                  type: array
+                  description: List of document access attributes
+                  items:
+                    $ref: '#/components/schemas/AccessAttribute'
+            AccessAttribute:
+              type: object
+              description: 'Document Access Attribute (requires either: stringValue, numberValue, booleanValue)'
+              properties:
+                key:
+                  type: string
+                  description: Attribute key
+                stringValue:
+                  type: string
+                  description: Attribute with string value
+                numberValue:
+                  type: number
+                  description: Attribute with number value
+                booleanValue:
+                  type: boolean
+                  description: Attribute with boolean value
+            AddAccessAttribute:
+              required:
+              - key
+              type: object
+              description: 'Document Access Attribute (requires either: stringValue, numberValue, booleanValue)'
+              properties:
+                key:
+                  type: string
+                  description: Attribute key
+                stringValue:
+                  type: string
+                  description: Attribute with string value
+                numberValue:
+                  type: number
+                  description: Attribute with number value
+                booleanValue:
+                  type: boolean
+                  description: Attribute with boolean value
             AddDocumentTag:
               required:
               - key
@@ -5233,6 +5476,24 @@
                 insertedDate:
                   type: string
                   description: Inserted Timestamp
+            AddDocumentAccessAttributesResponse:
+              type: object
+              properties:
+                message:
+                  type: string
+                  description: Document Action message
+            SetDocumentAccessAttributesResponse:
+              type: object
+              properties:
+                message:
+                  type: string
+                  description: Document Action message
+            DeleteDocumentAccessAttributesResponse:
+              type: object
+              properties:
+                message:
+                  type: string
+                  description: Document Action message
             AddDocumentActionsResponse:
               type: object
               properties:
