# lambda-api/src/main/java/com/formkiq/stacks/api/handler/DocumentIdRequestHandler.java
@@ -44,6 +44,7 @@ import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import com.amazonaws.services.lambda.runtime.LambdaLogger;
+import com.formkiq.aws.dynamodb.DocumentAccessAttributesRecord;
 import com.formkiq.aws.dynamodb.DynamicObject;
 import com.formkiq.aws.dynamodb.PaginationResult;
 import com.formkiq.aws.dynamodb.SiteIdKeyGenerator;
@@ -378,9 +379,15 @@ public class DocumentIdRequestHandler
       logger.log("setting userId: " + item.getString("userId") + " contentType: "
           + item.getString("contentType"));
 
-      validateTagSchema(awsservice, siteId, item, item.getUserId(), isUpdate);
-      validateTags(item);
-      validateActions(awsservice, siteId, item, authorization);
+      Collection<ValidationError> errors = new ArrayList<>();
+      validateTagSchema(awsservice, siteId, item, item.getUserId(), isUpdate, errors);
+      validateTags(item, errors);
+      validateActions(awsservice, siteId, item, authorization, errors);
+      validateAccessAttributes(awsservice, item, errors);
+
+      if (!errors.isEmpty()) {
+        throw new ValidationException(errors);
+      }
 
       putObjectToStaging(logger, awsservice, maxDocumentCount, siteId, item);
 
@@ -391,6 +398,29 @@ public class DocumentIdRequestHandler
 
     ApiResponseStatus status = isUpdate ? SC_OK : SC_CREATED;
     return new ApiRequestHandlerResponse(status, new ApiMapResponse(map));
+  }
+
+  /**
+   * Validate Access Attributes.
+   * 
+   * @param awsservice {@link AwsServiceCache}
+   * @param item {@link DynamicDocumentItem}
+   * @param errors {@link Collection} {@link ValidationError}
+   */
+  private void validateAccessAttributes(final AwsServiceCache awsservice,
+      final DynamicDocumentItem item, final Collection<ValidationError> errors) {
+
+    List<DynamicObject> list = item.getList("accessAttributes");
+    List<DocumentAccessAttributesRecord> records = list.stream()
+        .map(a -> new DocumentAccessAttributesRecord().documentId(item.getDocumentId())
+            .stringValue(a.getString("stringValue")).booleanValue(a.getBoolean("booleanValue"))
+            .numberValue(a.getDouble("numberValue")))
+        .collect(Collectors.toList());
+
+    if (!awsservice.hasModule("opa") && !records.isEmpty()) {
+      errors.add(new ValidationErrorImpl().key("accessAttributes")
+          .error("Access attributes are only supported with the 'open policy access' module"));
+    }
   }
 
   /**
@@ -440,8 +470,8 @@ public class DocumentIdRequestHandler
   }
 
   private void validateActions(final AwsServiceCache awsservice, final String siteId,
-      final DynamicDocumentItem item, final ApiAuthorization authorization)
-      throws ValidationException {
+      final DynamicDocumentItem item, final ApiAuthorization authorization,
+      final Collection<ValidationError> errors) {
 
     List<DynamicObject> objs = item.getList("actions");
     if (!objs.isEmpty()) {
@@ -471,10 +501,7 @@ public class DocumentIdRequestHandler
       }).collect(Collectors.toList());
 
       for (Action action : actions) {
-        Collection<ValidationError> errors = this.actionsValidator.validation(action, configs);
-        if (!errors.isEmpty()) {
-          throw new ValidationException(errors);
-        }
+        errors.addAll(this.actionsValidator.validation(action, configs));
       }
     }
   }
@@ -536,19 +563,17 @@ public class DocumentIdRequestHandler
    * Validate Document Tags.
    * 
    * @param item {@link DynamicDocumentItem}
+   * @param errors {@link Collection} {@link ValidationError}
    * @throws ValidationException ValidationException
    */
-  private void validateTags(final DynamicDocumentItem item) throws ValidationException {
+  private void validateTags(final DynamicDocumentItem item,
+      final Collection<ValidationError> errors) throws ValidationException {
 
     List<DynamicObject> tags = item.getList("tags");
     List<String> tagKeys = tags.stream().map(t -> t.getString("key")).collect(Collectors.toList());
 
     DocumentTagValidator validator = new DocumentTagValidatorImpl();
-    Collection<ValidationError> errors = validator.validateKeys(tagKeys);
-
-    if (!errors.isEmpty()) {
-      throw new ValidationException(errors);
-    }
+    errors.addAll(validator.validateKeys(tagKeys));
   }
 
   /**
@@ -559,12 +584,13 @@ public class DocumentIdRequestHandler
    * @param item {@link DynamicDocumentItem}
    * @param userId {@link String}
    * @param isUpdate boolean
+   * @param errors {@link Collection} {@link ValidationError}
    * @throws ValidationException ValidationException
    * @throws BadException BadException
    */
   private void validateTagSchema(final AwsServiceCache cacheService, final String siteId,
-      final DynamicDocumentItem item, final String userId, final boolean isUpdate)
-      throws ValidationException, BadException {
+      final DynamicDocumentItem item, final String userId, final boolean isUpdate,
+      final Collection<ValidationError> errors) throws ValidationException, BadException {
 
     List<DynamicObject> doctags = item.getList("tags");
     DynamicObjectToDocumentTag transform =
@@ -574,8 +600,6 @@ public class DocumentIdRequestHandler
     }).collect(Collectors.toList());
 
     DocumentTagSchemaPlugin plugin = cacheService.getExtension(DocumentTagSchemaPlugin.class);
-
-    Collection<ValidationError> errors = new ArrayList<>();
 
     List<DocumentTag> compositeTags =
         plugin.addCompositeKeys(siteId, item, tags, userId, !isUpdate, errors).stream().map(t -> t)
